4-2 Lab/Compiler Design/LAB 4/parser.output
Grammar

    0 $accept: program $end

    1 program: lines

    2 lines: lines line
    3      | ε

    4 line: statement '\n'
    5     | '\n'

    6 statement: ID '=' expr
    7          | expr

    8 expr: expr '+' term
    9     | expr '-' term
   10     | term

   11 term: term '*' power
   12     | term '/' power
   13     | power

   14 power: factor '^' power
   15      | factor

   16 factor: SIN '(' expr ')'
   17       | COS '(' expr ')'
   18       | TAN '(' expr ')'
   19       | SQRT '(' expr ')'
   20       | LOG '(' expr ')'
   21       | '-' factor
   22       | '(' expr ')'
   23       | INTEGER
   24       | DOUBLE
   25       | ID


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 4 5
    '(' (40) 16 17 18 19 20 22
    ')' (41) 16 17 18 19 20 22
    '*' (42) 11
    '+' (43) 8
    '-' (45) 9 21
    '/' (47) 12
    '=' (61) 6
    '^' (94) 14
    error (256)
    INTEGER <ival> (258) 23
    DOUBLE <dval> (259) 24
    ID <sval> (260) 6 25
    SIN (261) 16
    COS (262) 17
    TAN (263) 18
    SQRT (264) 19
    LOG (265) 20
    UMINUS (266)


Nonterminals, with rules where they appear

    $accept (21)
        on left: 0
    program (22)
        on left: 1
        on right: 0
    lines (23)
        on left: 2 3
        on right: 1 2
    line (24)
        on left: 4 5
        on right: 2
    statement <dval> (25)
        on left: 6 7
        on right: 4
    expr <dval> (26)
        on left: 8 9 10
        on right: 6 7 8 9 16 17 18 19 20 22
    term <dval> (27)
        on left: 11 12 13
        on right: 8 9 10 11 12
    power <dval> (28)
        on left: 14 15
        on right: 11 12 13 14
    factor <dval> (29)
        on left: 16 17 18 19 20 21 22 23 24 25
        on right: 14 15 21


State 0

    0 $accept: • program $end

    $default  reduce using rule 3 (lines)

    program  go to state 1
    lines    go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: lines •
    2 lines: lines • line

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 6
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '\n'     shift, and go to state 13
    '('      shift, and go to state 14

    $default  reduce using rule 1 (program)

    line       go to state 15
    statement  go to state 16
    expr       go to state 17
    term       go to state 18
    power      go to state 19
    factor     go to state 20


State 3

    0 $accept: program $end •

    $default  accept


State 4

   23 factor: INTEGER •

    $default  reduce using rule 23 (factor)


State 5

   24 factor: DOUBLE •

    $default  reduce using rule 24 (factor)


State 6

    6 statement: ID • '=' expr
   25 factor: ID •

    '='  shift, and go to state 21

    $default  reduce using rule 25 (factor)


State 7

   16 factor: SIN • '(' expr ')'

    '('  shift, and go to state 22


State 8

   17 factor: COS • '(' expr ')'

    '('  shift, and go to state 23


State 9

   18 factor: TAN • '(' expr ')'

    '('  shift, and go to state 24


State 10

   19 factor: SQRT • '(' expr ')'

    '('  shift, and go to state 25


State 11

   20 factor: LOG • '(' expr ')'

    '('  shift, and go to state 26


State 12

   21 factor: '-' • factor

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    factor  go to state 28


State 13

    5 line: '\n' •

    $default  reduce using rule 5 (line)


State 14

   22 factor: '(' • expr ')'

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    expr    go to state 29
    term    go to state 18
    power   go to state 19
    factor  go to state 20


State 15

    2 lines: lines line •

    $default  reduce using rule 2 (lines)


State 16

    4 line: statement • '\n'

    '\n'  shift, and go to state 30


State 17

    7 statement: expr •
    8 expr: expr • '+' term
    9     | expr • '-' term

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32

    $default  reduce using rule 7 (statement)


State 18

   10 expr: term •
   11 term: term • '*' power
   12     | term • '/' power

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 10 (expr)


State 19

   13 term: power •

    $default  reduce using rule 13 (term)


State 20

   14 power: factor • '^' power
   15      | factor •

    '^'  shift, and go to state 35

    $default  reduce using rule 15 (power)


State 21

    6 statement: ID '=' • expr

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    expr    go to state 36
    term    go to state 18
    power   go to state 19
    factor  go to state 20


State 22

   16 factor: SIN '(' • expr ')'

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    expr    go to state 37
    term    go to state 18
    power   go to state 19
    factor  go to state 20


State 23

   17 factor: COS '(' • expr ')'

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    expr    go to state 38
    term    go to state 18
    power   go to state 19
    factor  go to state 20


State 24

   18 factor: TAN '(' • expr ')'

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    expr    go to state 39
    term    go to state 18
    power   go to state 19
    factor  go to state 20


State 25

   19 factor: SQRT '(' • expr ')'

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    expr    go to state 40
    term    go to state 18
    power   go to state 19
    factor  go to state 20


State 26

   20 factor: LOG '(' • expr ')'

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    expr    go to state 41
    term    go to state 18
    power   go to state 19
    factor  go to state 20


State 27

   25 factor: ID •

    $default  reduce using rule 25 (factor)


State 28

   21 factor: '-' factor •

    $default  reduce using rule 21 (factor)


State 29

    8 expr: expr • '+' term
    9     | expr • '-' term
   22 factor: '(' expr • ')'

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    ')'  shift, and go to state 42


State 30

    4 line: statement '\n' •

    $default  reduce using rule 4 (line)


State 31

    8 expr: expr '+' • term

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    term    go to state 43
    power   go to state 19
    factor  go to state 20


State 32

    9 expr: expr '-' • term

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    term    go to state 44
    power   go to state 19
    factor  go to state 20


State 33

   11 term: term '*' • power

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    power   go to state 45
    factor  go to state 20


State 34

   12 term: term '/' • power

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    power   go to state 46
    factor  go to state 20


State 35

   14 power: factor '^' • power

    INTEGER  shift, and go to state 4
    DOUBLE   shift, and go to state 5
    ID       shift, and go to state 27
    SIN      shift, and go to state 7
    COS      shift, and go to state 8
    TAN      shift, and go to state 9
    SQRT     shift, and go to state 10
    LOG      shift, and go to state 11
    '-'      shift, and go to state 12
    '('      shift, and go to state 14

    power   go to state 47
    factor  go to state 20


State 36

    6 statement: ID '=' expr •
    8 expr: expr • '+' term
    9     | expr • '-' term

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32

    $default  reduce using rule 6 (statement)


State 37

    8 expr: expr • '+' term
    9     | expr • '-' term
   16 factor: SIN '(' expr • ')'

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    ')'  shift, and go to state 48


State 38

    8 expr: expr • '+' term
    9     | expr • '-' term
   17 factor: COS '(' expr • ')'

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    ')'  shift, and go to state 49


State 39

    8 expr: expr • '+' term
    9     | expr • '-' term
   18 factor: TAN '(' expr • ')'

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    ')'  shift, and go to state 50


State 40

    8 expr: expr • '+' term
    9     | expr • '-' term
   19 factor: SQRT '(' expr • ')'

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    ')'  shift, and go to state 51


State 41

    8 expr: expr • '+' term
    9     | expr • '-' term
   20 factor: LOG '(' expr • ')'

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    ')'  shift, and go to state 52


State 42

   22 factor: '(' expr ')' •

    $default  reduce using rule 22 (factor)


State 43

    8 expr: expr '+' term •
   11 term: term • '*' power
   12     | term • '/' power

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 8 (expr)


State 44

    9 expr: expr '-' term •
   11 term: term • '*' power
   12     | term • '/' power

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 9 (expr)


State 45

   11 term: term '*' power •

    $default  reduce using rule 11 (term)


State 46

   12 term: term '/' power •

    $default  reduce using rule 12 (term)


State 47

   14 power: factor '^' power •

    $default  reduce using rule 14 (power)


State 48

   16 factor: SIN '(' expr ')' •

    $default  reduce using rule 16 (factor)


State 49

   17 factor: COS '(' expr ')' •

    $default  reduce using rule 17 (factor)


State 50

   18 factor: TAN '(' expr ')' •

    $default  reduce using rule 18 (factor)


State 51

   19 factor: SQRT '(' expr ')' •

    $default  reduce using rule 19 (factor)


State 52

   20 factor: LOG '(' expr ')' •

    $default  reduce using rule 20 (factor)
